Gate world behind demo completion

--- a/dustland.html
+++ b/dustland.html
@@ -50,7 +50,7 @@
     <div class="win">
       <header>Dustland — Start</header>
       <main>
-        <p class="muted">Save detected. Continue or start a new game?</p>
+        <p class="muted">Continue your journey or start a new game?</p>
         <div>
           <button class="btn" id="startContinue">Continue</button>
           <button class="btn" id="startNew">New Game</button>
