feat: add deterministic seeding and content split

--- a/dustland.html
+++ b/dustland.html
@@ -97,6 +97,7 @@
   </div>
 
   <script src="dustland-core.js"></script>
+  <script src="dustland-content.js"></script>
   <script src="dustland-nano.js"></script>
   <script src="dustland-engine.js"></script>
 </body>
