Ensure items have minimum value of 1

--- a/dustland.html
+++ b/dustland.html
@@ -24,6 +24,7 @@
         <div class="hud">
           <div class="badge">HP: <span id="hp">10</span></div>
           <div class="badge">AP: <span id="ap">2</span></div>
+          <div class="badge">Scrap: <span id="scrap">0</span></div>
           <div class="badge">Map: <span id="mapname">—</span></div>
         </div>
         <p class="muted" style="margin-top:10px">Controls: <b>WASD/Arrows</b> move • <b>E/Space</b> interact/door & take nearby item • <b>T</b> take item • <b>I</b> Inventory • <b>P</b> Party • <b>Q</b> Quests • <b>G/L</b> save/load • <b>M</b> minimap • <b>Esc</b> close</p>
