Refactor file structure and naming

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dustland: CRT Edition</title>
-  <link rel="stylesheet" href="dustland.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="nanoStatus">
@@ -97,9 +97,9 @@
     </div>
   </div>
 
-  <script src="dustland-core.js"></script>
-  <script src="dustland-content.js"></script>
-  <script src="dustland-nano.js"></script>
-  <script src="dustland-engine.js"></script>
+  <script src="src/core.js"></script>
+  <script src="src/content.js"></script>
+  <script src="src/nano-dialog.js"></script>
+  <script src="src/engine.js"></script>
 </body>
 </html>
