--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -30,6 +30,7 @@
       <label>ID<input id="npcId"/></label>
       <label>Name<input id="npcName"/></label>
       <label>Color<input id="npcColor" value="#9ef7a0"/></label>
+      <label>Map<input id="npcMap" value="world"/></label>
       <label>X<input id="npcX" type="number" min="0"/></label>
       <label>Y<input id="npcY" type="number" min="0"/></label>
       <label>Dialog<textarea id="npcDialog" rows="2"></textarea></label>
@@ -39,8 +40,13 @@
     <fieldset>
       <legend>Add Item</legend>
       <label>Name<input id="itemName"/></label>
+      <label>Map<input id="itemMap" value="world"/></label>
       <label>X<input id="itemX" type="number" min="0"/></label>
       <label>Y<input id="itemY" type="number" min="0"/></label>
+      <label>Slot<input id="itemSlot"/></label>
+      <label>Mods<textarea id="itemMods" rows="2"></textarea></label>
+      <label>Value<input id="itemValue" type="number" min="0"/></label>
+      <label>Use<textarea id="itemUse" rows="2"></textarea></label>
       <button class="btn" id="addItem">Add Item</button>
       <div class="list" id="itemList"></div>
     </fieldset>
