feat: add core NPC combat and shop presets

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -45,6 +45,8 @@
     <label>Quest<select id="npcQuest"><option value="">(none)</option></select></label>
     <label>Accept Text<textarea id="npcAccept" rows="2">Good luck.</textarea></label>
     <label>Turn-in Text<textarea id="npcTurnin" rows="2">Thanks for helping.</textarea></label>
+    <label><input type="checkbox" id="npcCombat"> Combat NPC</label>
+    <label><input type="checkbox" id="npcShop"> Shop NPC</label>
     <label>Tree JSON<textarea id="npcTree" rows="4" placeholder='{"start":{"text":"hi","choices":[{"label":"(Leave)","to":"bye"}]}}'></textarea></label>
     <div id="dialogPreview" style="margin-top:6px"></div>
     <button class="btn" id="addNPC">Add NPC</button>
