Add module loading to adventure editor

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -29,9 +29,11 @@
     <div class="controls">
       <button class="btn" id="regen">Generate World</button>
       <button class="btn" id="save">Download Module</button>
+      <button class="btn" id="load">Load Module</button>
       <button class="btn" id="setStart">Set Start</button>
       <button class="btn" id="playtest">Playtest</button>
     </div>
+    <input type="file" id="loadFile" accept="application/json" style="display:none" />
   </div>
   <fieldset class="card" id="npcCard">
     <legend>Add NPC</legend>
