Allow editing NPC descriptions

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -39,6 +39,7 @@
     <legend>Add NPC</legend>
     <label>ID<input id="npcId"/></label>
     <label>Name<input id="npcName"/></label>
+    <label>Description<textarea id="npcDesc" rows="2"></textarea></label>
     <label>Color<input id="npcColor" type="color" value="#9ef7a0"/></label>
     <label>Map<input id="npcMap" value="world"/></label>
     <label>X<input id="npcX" type="number" min="0"/></label>
