--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -24,6 +24,9 @@
       #treeEditor .node{border:1px solid #2b3b2b;padding:4px;margin-top:4px;}
       #treeEditor .choices div{display:flex;gap:4px;margin-top:2px;}
       #treeEditor .choices input{flex:1;}
+      #treeEditor .nodeHeader{display:flex;align-items:center;}
+      #treeEditor .toggle{margin-right:4px;}
+      #treeEditor .node.collapsed .nodeBody{display:none;}
   </style>
 </head>
 <body>
