Add map coordinate picker

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -50,6 +50,7 @@
       <label>Map<input id="npcMap" value="world"/></label>
       <label>X<input id="npcX" type="number" min="0"/></label>
       <label>Y<input id="npcY" type="number" min="0"/></label>
+      <button class="btn" type="button" id="npcPick">Select on Map</button>
       <label>Dialog<textarea id="npcDialog" rows="2"></textarea></label>
       <label>Quest<select id="npcQuest"><option value="">(none)</option></select></label>
       <label>Accept Text<textarea id="npcAccept" rows="2">Good luck.</textarea></label>
@@ -76,6 +77,7 @@
       <label>Map<input id="itemMap" value="world"/></label>
       <label>X<input id="itemX" type="number" min="0"/></label>
       <label>Y<input id="itemY" type="number" min="0"/></label>
+      <button class="btn" type="button" id="itemPick">Select on Map</button>
       <label>Slot<select id="itemSlot">
         <option value="">(none)</option>
         <option value="weapon">Weapon</option>
