Add quest dialog generation button

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -52,6 +52,7 @@
       <label>Y<input id="npcY" type="number" min="0"/></label>
       <label>Dialog<textarea id="npcDialog" rows="2"></textarea></label>
       <label>Quest<select id="npcQuest"><option value="">(none)</option></select></label>
+      <button class="btn" type="button" id="genQuestDialog" style="display:none">Generate Quest Dialog</button>
       <label>Accept Text<textarea id="npcAccept" rows="2">Good luck.</textarea></label>
       <label>Turn-in Text<textarea id="npcTurnin" rows="2">Thanks for helping.</textarea></label>
       <label><input type="checkbox" id="npcCombat"> Combat NPC</label>
