--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -55,7 +55,9 @@
       <label>Accept Text<textarea id="npcAccept" rows="2">Good luck.</textarea></label>
       <label>Turn-in Text<textarea id="npcTurnin" rows="2">Thanks for helping.</textarea></label>
       <label><input type="checkbox" id="npcCombat"> Combat NPC</label>
+      <div id="combatOpts" style="display:none"><p class="muted">(no combat options)</p></div>
       <label><input type="checkbox" id="npcShop"> Shop NPC</label>
+      <div id="shopOpts" style="display:none"><p class="muted">(no shop options)</p></div>
       <div id="treeWrap">
         <label>Dialog Tree</label>
         <div id="treeEditor"></div>
