--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -52,8 +52,10 @@
       <label>Y<input id="npcY" type="number" min="0"/></label>
       <label>Dialog<textarea id="npcDialog" rows="2"></textarea></label>
       <label>Quest<select id="npcQuest"><option value="">(none)</option></select></label>
-      <label>Accept Text<textarea id="npcAccept" rows="2">Good luck.</textarea></label>
-      <label>Turn-in Text<textarea id="npcTurnin" rows="2">Thanks for helping.</textarea></label>
+      <div id="questTextWrap" style="display:none">
+        <label>Accept Text<textarea id="npcAccept" rows="2">Good luck.</textarea></label>
+        <label>Turn-in Text<textarea id="npcTurnin" rows="2">Thanks for helping.</textarea></label>
+      </div>
       <label><input type="checkbox" id="npcCombat"> Combat NPC</label>
       <label><input type="checkbox" id="npcShop"> Shop NPC</label>
       <div id="treeWrap">
