Toggle mods UI based on item slot

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -82,7 +82,7 @@
         <option value="armor">Armor</option>
         <option value="trinket">Trinket</option>
       </select></label>
-      <div id="modsWrap">
+      <div id="modsWrap" style="display:none">
         <label>Mods</label>
         <div id="modBuilder"></div>
         <button class="btn" type="button" id="addMod">Add Mod</button>
