feat: show tabs side-by-side on wide screens

--- a/ack-player.html
+++ b/ack-player.html
@@ -33,9 +33,11 @@
           <div class="tab" id="tabParty">Party</div>
           <div class="tab" id="tabQuests">Quests</div>
         </div>
-        <div id="inv"></div>
-        <div id="party" style="display:none"></div>
-        <div id="quests" style="display:none"></div>
+        <div class="tabwrap" id="tabWrap">
+          <div id="inv"></div>
+          <div id="party" style="display:none"></div>
+          <div id="quests" style="display:none"></div>
+        </div>
         <div style="margin-top:8px">
           <button class="btn" id="saveBtn">Save</button>
           <button class="btn" id="loadBtn">Load</button>
