--- a/dustland.html
+++ b/dustland.html
@@ -33,15 +33,17 @@
           <div class="tab" id="tabParty">Party</div>
           <div class="tab" id="tabQuests">Quests</div>
         </div>
-        <div id="inv"></div>
-        <div id="party" style="display:none"></div>
+        <div class="tabwrap" id="tabWrap">
+          <div id="inv"></div>
+          <div id="party" style="display:none"></div>
           <div id="quests" style="display:none"></div>
-          <div style="margin-top:8px">
-            <button class="btn" id="saveBtn">Save</button>
-            <button class="btn" id="loadBtn">Load</button>
-            <button class="btn" id="resetBtn">Reset</button>
-            <button class="btn" id="nanoToggle">Nano Dialog</button>
-          </div>
+        </div>
+        <div style="margin-top:8px">
+          <button class="btn" id="saveBtn">Save</button>
+          <button class="btn" id="loadBtn">Load</button>
+          <button class="btn" id="resetBtn">Reset</button>
+          <button class="btn" id="nanoToggle">Nano Dialog</button>
+        </div>
         </div>
       </aside>
     </div>
