refactor: make items first-class with ids and tags

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -257,6 +257,9 @@
         <button class="btn" type="button" id="newItem">+ Item</button>
         <div id="itemEditor" style="display:none">
           <label>Name<input id="itemName" /></label>
+          <label>ID<input id="itemId" /></label>
+          <label>Type<input id="itemType" /></label>
+          <label>Tags<input id="itemTags" /></label>
           <label>Map<input id="itemMap" value="world" /></label>
           <label>X<input id="itemX" type="number" min="0" /></label>
           <label>Y<input id="itemY" type="number" min="0" /></label>
