Center camera on map changes and support equip messages

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -275,6 +275,7 @@
             <div id="modBuilder"></div>
             <button class="btn" type="button" id="addMod">Add Mod</button>
           </div>
+          <label>Equip<textarea id="itemEquip" rows="2"></textarea></label>
           <label>Value<input id="itemValue" type="number" min="0" /></label>
           <label>Use<textarea id="itemUse" rows="2"></textarea></label>
           <button class="btn" id="addItem">Add Item</button>
