convert ack-player and adventure-kit to esm

--- a/ack-player.html
+++ b/ack-player.html
@@ -124,20 +124,6 @@
     </div>
   </div>
 
-  <script src="dustland-core.js"></script>
-  <script src="core/party.js"></script>
-  <script src="core/inventory.js"></script>
-  <script src="core/effects.js"></script>
-  <script src="core/movement.js"></script>
-  <script src="core/dialog.js"></script>
-  <script src="core/combat.js"></script>
-  <script>
-    window._realOpenCreator = window.openCreator;
-    window.openCreator = function(){};
-    window.showStart = function(){};
-  </script>
-  <script src="dustland-nano.js"></script>
-  <script src="dustland-engine.js"></script>
-  <script src="ack-player.js"></script>
+  <script type="module" src="ack-player.js"></script>
 </body>
 </html>
