--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -386,13 +386,7 @@
     position:fixed; right:20px; bottom:20px; z-index:9999; border-radius:999px; padding:10px 14px;">
       ▶ Playtest
   </button>
-  <script src="dustland-core.js"></script>
-  <script src="core/party.js"></script>
-  <script src="core/inventory.js"></script>
-  <script src="core/effects.js"></script>
-  <script src="core/movement.js"></script>
-  <script src="core/dialog.js"></script>
-  <script src="adventure-kit.js"></script>
+  <script type="module" src="adventure-kit.js"></script>
 </body>
 
 </html>
