refactor: extract quest and npc modules

--- a/ack-player.html
+++ b/ack-player.html
@@ -131,6 +131,8 @@
   <script defer src="./core/dialog.js"></script>
   <script defer src="./core/combat.js"></script>
   <script defer src="./core/party.js"></script>
+  <script defer src="./core/quests.js"></script>
+  <script defer src="./core/npc.js"></script>
   <script defer src="./dustland-core.js"></script>
   <script defer src="./dustland-nano.js"></script>
   <script defer src="./dustland-engine.js"></script>
