wire up actions

--- a/dustland.html
+++ b/dustland.html
@@ -115,6 +115,7 @@
   <script defer src="./event-bus.js"></script>
   <script defer src="./core/effects.js"></script>
   <script defer src="./core/inventory.js"></script>
+  <script defer src="./core/actions.js"></script>
   <script defer src="./core/movement.js"></script>
   <script defer src="./core/dialog.js"></script>
   <script defer src="./core/combat.js"></script>
