adventureland error/exception cleanup

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -190,6 +190,7 @@
 </head>
 
 <body>
+  <canvas id="game" width="0" height="0" class="glow" aria-label="Dustland CRT"></canvas>
   <div class="ak-layout">
     <section class="card map-card" id="mapCard">
       <canvas id="map" width="640" height="480" aria-label="Map preview"></canvas>
