feat: add audio toggle

--- a/ack-player.html
+++ b/ack-player.html
@@ -43,6 +43,7 @@
           <button class="btn" id="loadBtn">Load</button>
           <button class="btn" id="resetBtn">Reset</button>
           <button class="btn" id="nanoToggle">Nano Dialog</button>
+          <button class="btn" id="audioToggle">Audio: On</button>
         </div>
       </div>
     </aside>
