feat: add in-site clear confirmation dialog

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -429,6 +429,15 @@
       </div><!-- /.tabpanes -->
     </aside>
   </div><!-- /.ak-layout -->
+  <div id="confirmModal" class="modal">
+    <div class="card" style="padding:12px;text-align:center">
+      <div id="confirmText" style="margin-bottom:8px"></div>
+      <div>
+        <button class="btn" id="confirmYes">Yes</button>
+        <button class="btn" id="confirmNo">Cancel</button>
+      </div>
+    </div>
+  </div>
   <div id="dialogModal" class="modal">
     <div class="card">
       <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
