add walls to adventure-kit

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -207,6 +207,7 @@
             <button type="button" data-tile="3" style="background:#203320"></button>
             <button type="button" data-tile="4" style="background:#777777"></button>
             <button type="button" data-tile="5" style="background:#304326"></button>
+            <button type="button" data-tile="6" style="background:#4d5f4d"></button>
           </div>
           <button class="btn" id="noiseToggle">Noise: On</button>
           <button class="btn" id="clear">Clear Map</button>
