adventure-kit styling

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -212,9 +212,11 @@
           <button class="btn" id="noiseToggle">Noise: On</button>
           <button class="btn" id="clear">Clear Map</button>
         </div>
+        <div class="btn-group">
+        <div style="padding:0px 13px 0px 0px;font-family: sans-serif;">
         <label for="moduleName">Module Name</label>
         <input type="text" id="moduleName" />
-        <div class="btn-group">
+        </div>
           <button class="btn btn--primary" id="save">Download Module</button>
           <button class="btn" id="load">Load Module</button>
         </div>
