feat: style dialog editor node controls

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -163,8 +163,18 @@
       align-items: center;
     }
 
+    #treeEditor .nodeHeader .btn {
+      padding: 2px 4px;
+      margin: 0 4px 0 0;
+    }
+
     #treeEditor .toggle {
       margin-right: 4px;
+    }
+
+    #treeEditor .delNode {
+      margin-left: auto;
+      margin-right: 0;
     }
 
     #treeEditor .node.collapsed .nodeBody {
