feat: add legacy compat shims and wire into HTML
docs: mark migration shims complete in tech debt plan.

--- a/dustland.html
+++ b/dustland.html
@@ -212,6 +212,7 @@
 
     <script defer src="./scripts/event-bus.js"></script>
     <script defer src="./scripts/fx-config.js"></script>
+    <script defer src="./scripts/compat-shims.js"></script>
     <script defer src="./scripts/ui.js"></script>
     <script defer src="./scripts/core/item-generator.js"></script>
     <script defer src="./scripts/core/effects.js"></script>
