feat: add workshop and workbench crafting

--- a/dustland.html
+++ b/dustland.html
@@ -249,6 +249,7 @@
     <script defer src="./scripts/game-state.js"></script>
     <script defer src="./scripts/core/personas.js"></script>
     <script defer src="./scripts/beacon-tutorial.js"></script>
+    <script defer src="./scripts/workbench.js"></script>
     <script defer src="./components/dial.js"></script>
     <script defer src="./scripts/radio-tower-puzzle.js"></script>
     <script defer src="./scripts/radio-events.js"></script>
