system: group support scripts

--- a/dustland.html
+++ b/dustland.html
@@ -262,8 +262,8 @@
     <script defer src="./scripts/dustland-engine.js"></script>
     <script defer src="./scripts/camp-persona.js"></script>
     <script defer src="./scripts/version-log.js"></script>
-    <script defer src="./scripts/fx-debug.js"></script>
-    <script defer src="./scripts/perf-debug.js"></script>
+    <script defer src="./scripts/supporting/fx-debug.js"></script>
+    <script defer src="./scripts/supporting/perf-debug.js"></script>
   <script>
     window.addEventListener('DOMContentLoaded', () => {
       document.getElementById('title').textContent += ' v' + ENGINE_VERSION;
