--- a/music-demo.html
+++ b/music-demo.html
@@ -223,7 +223,7 @@
     </div>
   </div>
 
-  <script src="scripts/music-utils.js"></script>
+  <script src="scripts/supporting/music-utils.js"></script>
   <script src="music-demo.js"></script>
 </body>
 
