test: cover trainer dropdown parsing

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -459,6 +459,10 @@
             <label>Markup<input id="shopMarkup" type="number" min="1" value="2" /></label>
             <label>Refresh<input id="shopRefresh" type="number" min="0" value="0" /></label>
           </div>
+          <label><input type="checkbox" id="npcTrainer"> Trainer NPC</label>
+          <div id="trainerOpts" style="display:none">
+            <label>Trainer Type<select id="npcTrainerType"><option value="power">Power</option><option value="endurance">Endurance</option><option value="tricks">Tricks</option></select></label>
+          </div>
           <div id="treeWrap">
             <label>Dialog Tree</label>
             <button class="btn" type="button" id="editDialog">Edit Dialog</button>
